# generic-merge

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  validate-pr-title.yml
matching/: Cargo.toml
matching/src/: ast_node.rs  changes_tree_node.rs  lib.rs  matching.rs  matching_configuration.rs  matching_entry.rs  matchings.rs  ordered_tree_matching.rs  unordered_tree_matching.rs
matching/src/assignment_problem/: mod.rs
matching/src/ordered/: mod.rs
matching/src/unordered/: assignment_problem.rs  mod.rs  unique_label.rs
matching/tests/: perfect_matching.rs
matching_handlers/: Cargo.toml
matching_handlers/src/: lib.rs
matching_handlers/src/java/: class_like_declaration.rs  field_declaration.rs  import_declaration.rs  method_declaration.rs  mod.rs  utils.rs
merge/: Cargo.toml
merge/src/: lib.rs  merge.rs  merge_error.rs  merge_terminals.rs  merged_cst_node.rs  odered_merge.rs  ordered_merge.rs  unordered_merge.rs
model/: Cargo.toml
model/src/: cst_node.rs  language.rs  lib.rs
parsing/: Cargo.toml
parsing/src/: language.rs  lib.rs  parse.rs  tree_sitter_parser.rs
parsing_handlers/: Cargo.toml
parsing_handlers/src/: language.rs  lib.rs  parsing_handlers.rs
parsing_handlers/src/java/: mod.rs  remove_block_comments.rs  tweak_import_declarations.rs
public_private/: merge.output.java
utils/src/: lib.rs  unordered_pair.rs
