[package]
name = "merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
matching = { path = "../matching" }
matching_handlers = { path = "../matching_handlers" }
diffy = "0.3.0"
log = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
