[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.9"
tree-sitter-java = "0.20.0"
model = { path = "../model" }
log = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
